services/proxy/k8s/base/https-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: elia-https-redirect-middleware
spec:
  redirectScheme:
    scheme: https
    permanent: true
