services/proxy/k8s/base/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elia-proxy-ingress-backend
  annotations:
    traefik.frontend.priority: "2"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: elia-backend
                port:
                  number: 80
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: elia-backend
                port:
                  number: 80
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: elia-backend
                port:
                  number: 80
