services/proxy/k8s/base/ingress-frontend.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elia-proxy-ingress-frontend
  annotations:
    traefik.frontend.priority: "3"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elia-frontend
                port:
                  number: 80
