services/proxy/k8s/base/ingress-search-engine-interface.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elia-proxy-ingress-search-engine-interface
  annotations:
    traefik.frontend.priority: "4"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elia-search-engine-interface
                port:
                  number: 5601
